--- a/whoami/src/components/App.css
+++ b/whoami/src/components/App.css
@@ -5,8 +5,46 @@ body {
     overflow-x: hidden;
 }
 
-.wrapper {
+.navbar {
+    overflow: hidden;
+}
+
+.my-link {
+    letter-spacing: 2px;
+}
+
+.my-link:hover {
+    animation: border 800ms;
+    animation-fill-mode: forwards;
+    border-radius: 2px;
+    font-weight: bold;
+}
+
+@keyframes border {
+    0% {    
+        opacity: 0%;
+        border-bottom: 3px #F2F0F9 solid;
+    }
+    50% {
+        opacity: 50%;
+        border-bottom: 3px #F2F0F9 solid;
+    } 
+    100% {
+        opacity: 100%;
+        border-bottom: 3px #F2F0F9 solid;
+    }
+}
+
+.color-wrapper {
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
     background-color: #3C2097;
+}
+
+.white-wrapper {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background-color: #F2F0F9;
 }
