--- a/whoami/src/components/about/about.css
+++ b/whoami/src/components/about/about.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 
-body {
+* {
     font-family: 'Cabin', sans-serif;
     overflow-x: hidden;
 }
+
