--- a/whoami/src/components/App.css
+++ b/whoami/src/components/App.css
@@ -35,11 +35,18 @@ body {
     }
 }
 
-.color-wrapper {
+.particle-wrapper{
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    background-color: #3C2097;
+    background-color: #3c2097f1;
+}
+
+.color-wrapper {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    background-color: #3c2097;
 }
 
 .white-wrapper {
