--- a/whoami/src/components/App.css
+++ b/whoami/src/components/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Cabin', sans-serif;
     overflow-x: hidden;
@@ -52,6 +56,6 @@ body {
 .white-wrapper {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
     background-color: #F2F0F9;
 }
