--- a/whoami/src/components/about/about.css
+++ b/whoami/src/components/about/about.css
@@ -5,3 +5,24 @@
     overflow-x: hidden;
 }
 
+#about-card:hover{
+    animation: about-scale 1s;
+}
+
+@keyframes about-scale {
+    0%{
+        transform: scale(1.005);
+    }
+    25% {
+        transform: scale(1.01);
+    }
+    50% {
+        transform: scale(1.012);
+    }
+    75% {
+        transform: scale(1.01);
+    }
+    100% {
+        transform: scale(1.005);
+    }
+}
