--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,76 @@ button:active, button:focus {
     outline: none;
 }
 
+/* customisation for cli */
+
+.cli {
+    border-radius: 20px;
+    z-index: 100;
+}
+
+.cli-text p {
+    font-family:'Lucida Console', monospace
+}
+
+@-webkit-keyframes blink {
+    to {
+        opacity: 0.0;
+    }
+}
+
+@-moz-keyframes blink {
+    to {
+        opacity: 0.0;
+    }
+}
+
+@-ms-keyframes blink {
+    to {
+        opacity: 0.0;
+    }
+}
+
+@-o-keyframes blink {
+    to {
+        opacity: 0.0;
+    }
+}
+
+@keyframes blink {
+    to {
+        opacity: 0.0;
+    }
+}
+
+.arrow {
+    font-size: 2rem;
+    text-shadow: 0px 0px 10px var(--primary-color), 0px 0px 0px var(--primary-color);
+}
+
+.dash {
+    color: white;
+    text-shadow: 0px 0px 40px var(--primary-color), 0px 0px 40px var(--primary-color), 0px 0px 40px var(--primary-color);
+    -webkit-animation-name: blink;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    
+    -moz-animation-name: blink;
+    -moz-animation-duration: 1s;
+    -moz-animation-iteration-count: infinite;
+    
+    -ms-animation-name: blink;
+    -ms-animation-duration: 1s;
+    -ms-animation-iteration-count: infinite;
+    
+    -o-animation-name: blink;
+    -o-animation-duration: 1s;
+    -o-animation-iteration-count: infinite;
+    
+     animation-name: blink;
+     animation-duration: 1s;
+     animation-iteration-count: infinite;
+}
+
 /* customising base page */
 
 ::-moz-selection {
